# remote-terminal

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  electron-builder.yml  index.html  package-lock.json  package.json
electron/: main.mjs  preload-source.cjs  preload.cjs
scripts/: build-icon.mjs  build-preload.mjs  dev-electron.mjs  extract-release-notes.mjs  measure-memory.ps1  package-win.mjs  qa-electron.mjs  qa-native-ssh.mjs  qa-playwright.mjs  qa-rust-ssh.mjs  windows-authenticode.ps1
src/: App.jsx  NativeApp.jsx  credential-styles.css  demoData.js  feature-styles.css  main.jsx  native-styles.css  styles.css  theme-styles.css  update-styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.unsigned-0.3.1.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  command_history.rs  commands.rs  credentials.rs  data_directory.rs  drag_out.rs  error.rs  lib.rs  lifecycle.rs  main.rs  monitor.rs  ssh.rs  state.rs  storage.rs  tray.rs
src-tauri/tests/: ssh_protocol_smoke.rs  update_signature_verifier.rs
test/: app-error-boundary.test.mjs  authenticode-signing.test.mjs  command-completion.test.mjs  connection-store.test.mjs  credential-store.test.mjs  extract-release-notes.test.mjs  interface-theme.test.mjs  measure-memory-script.test.mjs  monitor-error-boundary.test.mjs  monitor-parser.test.mjs  native-client.test.mjs  ssh-manager.integration.test.mjs  terminal-context-menu.test.mjs  text-search.test.mjs  transfer-state.test.mjs  update-service.test.mjs  workspace-session.test.mjs
test-support/: ssh-fixture.mjs
(+62 files in other folders)
